--- a/src/components/Container/Container.module.scss
+++ b/src/components/Container/Container.module.scss
@@ -2,9 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-width: 400px;
-  max-width: 6000px;
-  padding: 20px;
+  width: 100%;
+  max-width: 500px;
+  padding: 1em 0 2em;
   margin: 0 auto;
   border-radius: 10px;
 }
