--- a/src/components/Timer/Timer.module.scss
+++ b/src/components/Timer/Timer.module.scss
@@ -3,10 +3,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding-top: 2em;
 
   > span {
     font-size: 120px;
-    font-weight: 700;
+    font-weight: bold ;
     margin-bottom: 20px;
   }
 }
