--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
+@font-face {
+  font-family: "Varela Round";
+  src: local("VarelaRound"),
+    url(./assets/fonts/VarelaRound/VarelaRound-Regular.ttf) format("truetype");
+}
+
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Varela Round", sans-serif;
 }
 
 * {
