--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -1,4 +1,8 @@
-.home {
+@import "../../shared/breakpoints.scss";
+
+$base-selector: ".home";
+
+#{$base-selector} {
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
@@ -6,20 +10,46 @@
   gap: 20px;
   height: 100vh;
   width: 100vw;
-  padding-top: 50px;
+  padding: 2em;
+  color: #fff;
 
-  > * {
-    color: #fff;
+  @include mobile {
+    padding: 1em;
+  }
+}
+
+#{$base-selector}__title {
+  font-size: 7vw;
+  text-align: center;
+
+  @include desktop-wide {
+    font-size: 3vw;
   }
 
-  h1 {
-    font-size: 36px;
+  @include desktop {
+    font-size: 4vw;
   }
 
-  .buttonContainer {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px;
-    gap: 10px;
+  @include tablet-wide {
+    font-size: 5vw;
+  }
+
+  @include tablet {
+    font-size: 6vw;
+  }
+}
+
+#{$base-selector}__button-timers {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  gap: 0.7em;
+
+  @include tablet {
+    gap: 0.5em;
+  }
+
+  @include mobile {
+    gap: 0.3em;
   }
 }
