--- a/src/components/Container/Container.module.scss
+++ b/src/components/Container/Container.module.scss
@@ -4,7 +4,8 @@
   align-items: center;
   width: 100%;
   max-width: 500px;
-  padding: 1em 0 2em;
+  padding: 2em;
   margin: 0 auto;
-  border-radius: 10px;
+  border-radius: 0.5em;
+  gap: 1em;
 }
