--- a/src/components/Container/Container.module.scss
+++ b/src/components/Container/Container.module.scss
@@ -4,7 +4,7 @@
   align-items: center;
   width: 100%;
   max-width: 500px;
-  padding: 2em;
+  padding: 2em 1em;
   margin: 0 auto;
   border-radius: 0.5em;
   gap: 2em;
