--- a/src/components/Timer/Timer.module.scss
+++ b/src/components/Timer/Timer.module.scss
@@ -7,8 +7,9 @@ $base-selector: ".timer";
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-family: "Arial Rounded" sans-serif;
-  font-size: 6vw;
+  font-family: "Arial Rounded", sans-serif;
+  font-size: 7vw;
+  font-weight: 900;
 
   @include desktop {
     font-size: 8vw;
