--- a/src/components/Timer/Timer.module.scss
+++ b/src/components/Timer/Timer.module.scss
@@ -7,7 +7,7 @@ $base-selector: ".timer";
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-family: "Arial Rounded", sans-serif;
+  font-family: "Arial Rounded Bold", sans-serif;
   font-size: 7vw;
   font-weight: 900;
 
