--- a/src/components/Container/Container.module.scss
+++ b/src/components/Container/Container.module.scss
@@ -2,10 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
-  max-width: 500px;
-  padding: 2em 1em;
+  justify-content: center;
   margin: 0 auto;
   border-radius: 0.5em;
   gap: 2em;
+  width: 100%;
 }
