fix: add button props for supporting more icon variants

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -7,7 +7,6 @@ $base-selector: ".button";
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  transition: all 0.1s ease-in-out;
   color: #fff;
   background-color: rgba(255, 255, 255, 0.2);
 
@@ -26,16 +25,34 @@ $base-selector: ".button";
 }
 
 #{$base-selector}__primary {
-  color: #fff;
   box-shadow: rgba(255, 255, 255, 0.1) 0px 6px 0px;
   width: 200px;
   font-size: 22px;
   text-transform: uppercase;
   font-weight: bold;
+  transition: transform 0.1s ease-in-out;
 
   &--active {
     box-shadow: none;
     transform: translateY(6px);
+  }
+}
+
+#{$base-selector}__dashed {
+  border: 2px dashed rgba(255, 255, 255, 0.4);
+  background-color: rgba(0, 0, 0, 0.1);
+  height: 4em;
+  width: 100%;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5em;
+  opacity: 0.7;
+  border-radius: 0.5em;
+
+  &:hover {
+    opacity: 1;
   }
 }
 
