--- a/src/components/Todo/TaskList.module.scss
+++ b/src/components/Todo/TaskList.module.scss
@@ -2,3 +2,11 @@ $base-selector: ".task-list";
 
 #{$base-selector} {
 }
+
+#{$base-selector}__ul {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+  list-style: none;
+  width: 100%;
+}
