--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -13,7 +13,9 @@ $base-selector: ".button";
   align-items: center;
   justify-content: center;
   font-weight: bold;
-  transition: opacity 0.2s ease-in-out, transform 0.2s ease-in-out;
+  transition:
+    opacity 0.2s ease-in-out,
+    transform 0.2s ease-in-out;
 
   &:focus-visible {
     outline: 2px solid #fff;
@@ -44,7 +46,9 @@ $base-selector: ".button";
   min-height: 44px;
   font-size: 0.95rem;
   border-radius: 5px;
-  transition: background-color 0.2s ease-in-out, transform 0.2s ease-in-out;
+  transition:
+    background-color 0.2s ease-in-out,
+    transform 0.2s ease-in-out;
 
   &:hover {
     background-color: rgba(0, 0, 0, 0.1);
@@ -62,7 +66,9 @@ $base-selector: ".button";
   width: 200px;
   font-size: 22px;
   text-transform: uppercase;
-  transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+  transition:
+    transform 0.2s ease-in-out,
+    box-shadow 0.2s ease-in-out;
 
   &--active {
     box-shadow: none;
@@ -79,7 +85,9 @@ $base-selector: ".button";
   opacity: 0.7;
   border-radius: 1.5em;
   padding: 0 1.5em;
-  transition: opacity 0.2s ease-in-out, transform 0.1s ease-in-out;
+  transition:
+    opacity 0.2s ease-in-out,
+    transform 0.1s ease-in-out;
 
   &:hover {
     opacity: 1;
